--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     volumes:
       - ./backend:/app
     environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/interview_app
+      - MONGO_URI=mongodb://mongo:27017/interview_app
     depends_on:
-      - db
+      - mongo
 
   frontend:
     build: ./frontend
@@ -21,16 +21,12 @@ services:
     depends_on:
       - backend
 
-  db:
-    image: postgres:13
+  mongo:
+    image: mongo:latest
     ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=interview_app
+      - "27017:27017"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - mongo_data:/data/db
 
 volumes:
-  postgres_data:
+  mongo_data:
